guessaiword/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guessaiword
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guessaiword
  template:
    metadata:
      labels:
        app: guessaiword
    spec:
      containers:
      - name: guessaiword
        image: ghcr.io/pmh-only/guessaiword
        resources:
          requests:
            cpu: 100m
            memory: 300MiB
          limits:
            cpu: 100m
            memory: 300MiB
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: guessaiword-secret
          mountPath: "/app/config"
          readOnly: true
      volumes:
      - name: guessaiword-secret
        secret:
          secretName: guessaiword-secret
          items:
          - key: application.properties
            path: application.properties
