guessaiword/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guessaiword-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - guess.pmh.codes
    secretName: guessaiword-ingress-tls
  ingressClassName: nginx
  rules:
  - host: guess.pmh.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guessaiword-service
            port:
              number: 8080
